--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,16 @@
 S3method(compute_consensus,BayesMallows)
 S3method(compute_consensus,SMCMallows)
 S3method(compute_posterior_intervals,BayesMallows)
+S3method(compute_posterior_intervals,BayesMallowsDPMixture)
 S3method(compute_posterior_intervals,SMCMallows)
 S3method(plot,BayesMallows)
+S3method(plot,BayesMallowsDPMixture)
 S3method(plot,SMCMallows)
 S3method(print,BayesMallows)
+S3method(print,BayesMallowsDPMixture)
 S3method(print,BayesMallowsMixtures)
 export(assess_convergence)
+export(assess_convergence_dpmixture)
 export(assign_cluster)
 export(calculate_backward_probability)
 export(calculate_forward_probability)
