Updated documentation in NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,8 +17,10 @@ export(assess_convergence_dpmixture)
 export(assign_cluster)
 export(calculate_backward_probability)
 export(calculate_forward_probability)
+export(compute_co_clustering)
 export(compute_consensus)
 export(compute_mallows)
+export(compute_mallows_dpmixture)
 export(compute_mallows_mixtures)
 export(compute_posterior_intervals)
 export(compute_posterior_intervals_alpha)
@@ -33,6 +35,8 @@ export(generate_initial_ranking)
 export(generate_transitive_closure)
 export(get_mallows_loglik)
 export(heat_plot)
+export(leap_and_shift)
+export(partition_estimate)
 export(plot_elbow)
 export(plot_top_k)
 export(predict_top_k)
